improved folder nameing and added more icons

--- a/index.html
+++ b/index.html
@@ -59,18 +59,46 @@
       <div class="main-content">
         <div class="header">
           <div class="topbar">
-            <img src="" class="magnifier" alt="" />
-            <input type="text" />
-            <img src="" class="bell" alt="" />
-            <img src="" class="icon" alt="" />
-            <p>Morgan Freeman</p>
+            <div class="search-bar">
+              <img
+                src="/assets/icons/magnify.svg"
+                class="magnifier fa_icon"
+                style="transform: rotate(90deg)"
+                alt="search"
+              />
+              <input type="text" />
+            </div>
+            <div class="notifications-name">
+              <img
+                src="/assets/icons/bell.svg"
+                class="bell fa_icon"
+                alt="notifications"
+              />
+              <img
+                src="/assets/icons/icons8-anonymous-mask-100.svg"
+                class="icon"
+                alt="Morgan Freeman"
+              />
+              <p>Morgan Freeman</p>
+            </div>
           </div>
           <div class="bottombar">
-            <img src="" class="icon" alt="" />
-            <p>Hi there, <span>Morgan Freeman (@mfreeman)</span></p>
-            <button class="profile-button-action">New</button>
-            <button class="profile-button-action">Upload</button>
-            <button class="profile-button-action">Share</button>
+            <div class="profile">
+              <img
+                src="/assets/icons/icons8-anonymous-mask-100.svg"
+                class="icon"
+                alt="profile picture"
+              />
+              <p>
+                Hi there, <br />
+                <span class="username">Morgan Freeman (@mfreeman)</span>
+              </p>
+            </div>
+            <div class="action-buttons">
+              <button class="profile-button-action">New</button>
+              <button class="profile-button-action">Upload</button>
+              <button class="profile-button-action">Share</button>
+            </div>
           </div>
         </div>
         <div class="projects">Your Projects</div>
