added logo and finished sidebar

--- a/index.html
+++ b/index.html
@@ -12,46 +12,74 @@
     <div class="container">
       <div class="sidebar">
         <!-- logo -->
-        <img src="" alt="" />
+        <img
+          src="/assets/icons/upcareera_logo_1.svg"
+          class="logo"
+          alt="Upcareera"
+        />
         <!-- external links -->
         <div class="links-container-one">
           <p class="external-link">
-            <img src="" class="sidebar-icon" alt="" />
+            <img src="/assets/icons/home.svg" class="sidebar-icon" alt="" />
             <a href="">Home</a>
           </p>
           <p class="external-link">
-            <img src="" class="sidebar-icon" alt="" />
+            <img
+              src="/assets/icons/smart-card.svg"
+              class="sidebar-icon"
+              alt=""
+            />
             <a href="">Profile</a>
           </p>
           <p class="external-link">
-            <img src="" class="sidebar-icon" alt="" />
+            <img
+              src="/assets/icons/android-messages.svg"
+              class="sidebar-icon"
+              alt=""
+            />
             <a href="">Messages</a>
           </p>
           <p class="external-link">
-            <img src="" class="sidebar-icon" alt="" />
+            <img src="/assets/icons/history.svg" class="sidebar-icon" alt="" />
             <a href="">History</a>
           </p>
           <p class="external-link">
-            <img src="" class="sidebar-icon" alt="" />
+            <img
+              src="/assets/icons/arrow-decision.svg"
+              class="sidebar-icon"
+              alt=""
+            />
             <a href="">Tasks</a>
           </p>
           <p class="external-link">
-            <img src="" class="sidebar-icon" alt="" />
+            <img
+              src="/assets/icons/account-group.svg"
+              class="sidebar-icon"
+              alt=""
+            />
             <a href="">Communities</a>
           </p>
         </div>
 
         <div class="links-container-two">
           <p class="external-link">
-            <img src="" class="sidebar-icon" alt="" />
+            <img src="/assets/icons/cog.svg" class="sidebar-icon" alt="" />
             <a href="">Settings</a>
           </p>
           <p class="external-link">
-            <img src="" class="sidebar-icon" alt="" />
+            <img
+              src="/assets/icons/help-rhombus.svg"
+              class="sidebar-icon"
+              alt=""
+            />
             <a href="">Support</a>
           </p>
           <p class="external-link">
-            <img src="" class="sidebar-icon" alt="" />
+            <img
+              src="/assets/icons/shield-lock.svg"
+              class="sidebar-icon"
+              alt=""
+            />
             <a href="">Privacy</a>
           </p>
         </div>
