Added all the items

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="reset.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <title>Dashboard | Upcareera</title>
   </head>
   <body>
@@ -60,7 +66,6 @@
             <a href="">Communities</a>
           </p>
         </div>
-
         <div class="links-container-two">
           <p class="external-link">
             <img src="/assets/icons/cog.svg" class="sidebar-icon" alt="" />
@@ -129,8 +134,155 @@
             </div>
           </div>
         </div>
-        <div class="projects">Your Projects</div>
-        <div class="announcements projects">Announcements</div>
+        <div class="titles">
+          <h2>Your Projects</h2>
+          <h2>Announcements</h2>
+        </div>
+        <div class="projects">
+          <!-- <div></div> -->
+          <!-- empty div to line up the cads -->
+          <div class="card">
+            <h3>Calculator</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+              facilis alias, nulla inventore dolorem et?
+            </p>
+            <div class="card-buttons">
+              <img src="/assets/icons/thumb-up-outline.svg" alt="" />
+              <img src="/assets/icons/thumb-down-outline.svg" alt="" />
+              <img src="/assets/icons/comment-processing-outline.svg" alt="" />
+              <img src="/assets/icons/bookmark-outline.svg" alt="" />
+            </div>
+          </div>
+          <div class="card">
+            <h3>Sign Up Page</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+              facilis alias, nulla inventore dolorem et? Veniam aliquid quis
+              voluptas labore.
+            </p>
+            <div class="card-buttons">
+              <img src="/assets/icons/thumb-up-outline.svg" alt="" />
+              <img src="/assets/icons/thumb-down-outline.svg" alt="" />
+              <img src="/assets/icons/comment-processing-outline.svg" alt="" />
+              <img src="/assets/icons/bookmark-outline.svg" alt="" />
+            </div>
+          </div>
+          <div class="card">
+            <h3>Etch A Sketch</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+              facilis alias, nulla inventore dolorem et? Veniam aliquid quis
+              voluptas labore rerum doloribus itaque cupiditate facere, ipsa
+              ipsam.
+            </p>
+
+            <div class="card-buttons">
+              <img src="/assets/icons/thumb-up-outline.svg" alt="" />
+              <img src="/assets/icons/thumb-down-outline.svg" alt="" />
+              <img src="/assets/icons/comment-processing-outline.svg" alt="" />
+              <img src="/assets/icons/bookmark-outline.svg" alt="" />
+            </div>
+          </div>
+          <div class="card">
+            <h3>Rock Paper Scissors</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+              facilis alias, nulla inventore dolorem et? Veniam aliquid quis
+              voluptas labore rerum doloribus itaque cupiditate facere.
+            </p>
+            <div class="card-buttons">
+              <img src="/assets/icons/thumb-up-outline.svg" alt="" />
+              <img src="/assets/icons/thumb-down-outline.svg" alt="" />
+              <img src="/assets/icons/comment-processing-outline.svg" alt="" />
+              <img src="/assets/icons/bookmark-outline.svg" alt="" />
+            </div>
+          </div>
+          <div class="card">
+            <h3>Javascript 30</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+              facilis alias.
+            </p>
+            <div class="card-buttons">
+              <img src="/assets/icons/thumb-up-outline.svg" alt="" />
+              <img src="/assets/icons/thumb-down-outline.svg" alt="" />
+              <img src="/assets/icons/comment-processing-outline.svg" alt="" />
+              <img src="/assets/icons/bookmark-outline.svg" alt="" />
+            </div>
+          </div>
+          <div class="card">
+            <h3>Javascript Exercises</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem
+              facilis alias, nulla inventore dolorem et? Veniam aliquid quis.
+            </p>
+            <div class="card-buttons">
+              <img src="/assets/icons/thumb-up-outline.svg" alt="" />
+              <img src="/assets/icons/thumb-down-outline.svg" alt="" />
+              <img src="/assets/icons/comment-processing-outline.svg" alt="" />
+              <img src="/assets/icons/bookmark-outline.svg" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="announcements">
+          <div class="top">
+            <div class="news">
+              <h4>Site Maintenance</h4>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Assumenda earum est repellat ab vitae reprehenderit minus vel.
+              </p>
+            </div>
+            <div class="line"></div>
+            <div class="news">
+              <h4>Community Share Day</h4>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Assumenda earum est repellat ab vitae reprehenderit minus vel.
+              </p>
+            </div>
+            <div class="line"></div>
+            <div class="news">
+              <h4>Updated Privacy Policy</h4>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Assumenda earum est repellat ab vitae reprehenderit minus vel.
+              </p>
+            </div>
+          </div>
+          <h2>Trending</h2>
+          <div class="bottom">
+            <div class="trend">
+              <img src="/assets/icons/icons8-iron-man.svg" alt="" />
+              <p class="username">
+                @tegan <br />
+                <span class="name">World Peace Builder</span>
+              </p>
+            </div>
+            <div class="trend">
+              <img src="/assets/icons/icons8-anonymous-mask-100.svg" alt="" />
+              <p class="username">
+                @mfreeman <br />
+                <span class="name">The God Actor</span>
+              </p>
+            </div>
+            <div class="trend">
+              <img src="/assets/icons/icons8-futurama-bender.svg" alt="" />
+              <p class="username">
+                @bender <br />
+                <span class="name">Bender Fender</span>
+              </p>
+            </div>
+            <div class="trend">
+              <img src="/assets/icons/icons8-jake.svg" alt="" />
+              <p class="username">
+                @alex <br />
+                <span class="name">No Traffic Maker</span>
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
