--- a/index.html
+++ b/index.html
@@ -16,6 +16,50 @@
   </head>
   <body>
     <div class="container">
+      <div class="header">
+        <div class="topbar">
+          <div class="search-bar">
+            <img
+              src="/assets/icons/magnify.svg"
+              class="magnifier fa_icon"
+              style="transform: rotate(90deg)"
+              alt="search"
+            />
+            <input type="text" />
+          </div>
+          <div class="notifications-name">
+            <img
+              src="/assets/icons/bell.svg"
+              class="bell fa_icon"
+              alt="notifications"
+            />
+            <img
+              src="/assets/icons/icons8-anonymous-mask-100.svg"
+              class="icon"
+              alt="Morgan Freeman"
+            />
+            <p>Morgan Freeman</p>
+          </div>
+        </div>
+        <div class="bottombar">
+          <div class="profile">
+            <img
+              src="/assets/icons/icons8-anonymous-mask-100.svg"
+              class="icon"
+              alt="profile picture"
+            />
+            <p>
+              Hi there, <br />
+              <span class="username">Morgan Freeman (@mfreeman)</span>
+            </p>
+          </div>
+          <div class="action-buttons">
+            <button class="profile-button-action">New</button>
+            <button class="profile-button-action">Upload</button>
+            <button class="profile-button-action">Share</button>
+          </div>
+        </div>
+      </div>
       <div class="sidebar">
         <!-- logo -->
         <img
@@ -24,123 +68,81 @@
           alt="Upcareera"
         />
         <!-- external links -->
-        <div class="links-container-one">
-          <p class="external-link">
-            <img src="/assets/icons/home.svg" class="sidebar-icon" alt="" />
-            <a href="">Home</a>
-          </p>
-          <p class="external-link">
-            <img
-              src="/assets/icons/smart-card.svg"
-              class="sidebar-icon"
-              alt=""
-            />
-            <a href="">Profile</a>
-          </p>
-          <p class="external-link">
-            <img
-              src="/assets/icons/android-messages.svg"
-              class="sidebar-icon"
-              alt=""
-            />
-            <a href="">Messages</a>
-          </p>
-          <p class="external-link">
-            <img src="/assets/icons/history.svg" class="sidebar-icon" alt="" />
-            <a href="">History</a>
-          </p>
-          <p class="external-link">
-            <img
-              src="/assets/icons/arrow-decision.svg"
-              class="sidebar-icon"
-              alt=""
-            />
-            <a href="">Tasks</a>
-          </p>
-          <p class="external-link">
-            <img
-              src="/assets/icons/account-group.svg"
-              class="sidebar-icon"
-              alt=""
-            />
-            <a href="">Communities</a>
-          </p>
-        </div>
-        <div class="links-container-two">
-          <p class="external-link">
-            <img src="/assets/icons/cog.svg" class="sidebar-icon" alt="" />
-            <a href="">Settings</a>
-          </p>
-          <p class="external-link">
-            <img
-              src="/assets/icons/help-rhombus.svg"
-              class="sidebar-icon"
-              alt=""
-            />
-            <a href="">Support</a>
-          </p>
-          <p class="external-link">
-            <img
-              src="/assets/icons/shield-lock.svg"
-              class="sidebar-icon"
-              alt=""
-            />
-            <a href="">Privacy</a>
-          </p>
+        <div>
+          <div class="links-container-one">
+            <p class="external-link">
+              <img src="/assets/icons/home.svg" class="sidebar-icon" alt="" />
+              <a href="">Home</a>
+            </p>
+            <p class="external-link">
+              <img
+                src="/assets/icons/smart-card.svg"
+                class="sidebar-icon"
+                alt=""
+              />
+              <a href="">Profile</a>
+            </p>
+            <p class="external-link">
+              <img
+                src="/assets/icons/android-messages.svg"
+                class="sidebar-icon"
+                alt=""
+              />
+              <a href="">Messages</a>
+            </p>
+            <p class="external-link">
+              <img
+                src="/assets/icons/history.svg"
+                class="sidebar-icon"
+                alt=""
+              />
+              <a href="">History</a>
+            </p>
+            <p class="external-link">
+              <img
+                src="/assets/icons/arrow-decision.svg"
+                class="sidebar-icon"
+                alt=""
+              />
+              <a href="">Tasks</a>
+            </p>
+            <p class="external-link">
+              <img
+                src="/assets/icons/account-group.svg"
+                class="sidebar-icon"
+                alt=""
+              />
+              <a href="">Communities</a>
+            </p>
+          </div>
+          <div class="links-container-two">
+            <p class="external-link">
+              <img src="/assets/icons/cog.svg" class="sidebar-icon" alt="" />
+              <a href="">Settings</a>
+            </p>
+            <p class="external-link">
+              <img
+                src="/assets/icons/help-rhombus.svg"
+                class="sidebar-icon"
+                alt=""
+              />
+              <a href="">Support</a>
+            </p>
+            <p class="external-link">
+              <img
+                src="/assets/icons/shield-lock.svg"
+                class="sidebar-icon"
+                alt=""
+              />
+              <a href="">Privacy</a>
+            </p>
+          </div>
         </div>
       </div>
-      <div class="main-content">
-        <div class="header">
-          <div class="topbar">
-            <div class="search-bar">
-              <img
-                src="/assets/icons/magnify.svg"
-                class="magnifier fa_icon"
-                style="transform: rotate(90deg)"
-                alt="search"
-              />
-              <input type="text" />
-            </div>
-            <div class="notifications-name">
-              <img
-                src="/assets/icons/bell.svg"
-                class="bell fa_icon"
-                alt="notifications"
-              />
-              <img
-                src="/assets/icons/icons8-anonymous-mask-100.svg"
-                class="icon"
-                alt="Morgan Freeman"
-              />
-              <p>Morgan Freeman</p>
-            </div>
-          </div>
-          <div class="bottombar">
-            <div class="profile">
-              <img
-                src="/assets/icons/icons8-anonymous-mask-100.svg"
-                class="icon"
-                alt="profile picture"
-              />
-              <p>
-                Hi there, <br />
-                <span class="username">Morgan Freeman (@mfreeman)</span>
-              </p>
-            </div>
-            <div class="action-buttons">
-              <button class="profile-button-action">New</button>
-              <button class="profile-button-action">Upload</button>
-              <button class="profile-button-action">Share</button>
-            </div>
-          </div>
-        </div>
-        <div class="titles">
-          <h2>Your Projects</h2>
-          <h2>Announcements</h2>
-        </div>
-        <div class="projects">
-          <!-- <div></div> -->
-          <!-- empty div to line up the cads -->
+      <!-- <div class="main-content"> -->
+      <div class="projects">
+        <h2>Your Projects</h2>
+        <div>
           <div class="card">
             <h3>Calculator</h3>
             <p>
@@ -225,65 +227,68 @@
             </div>
           </div>
         </div>
-        <div class="announcements">
-          <div class="top">
-            <div class="news">
-              <h4>Site Maintenance</h4>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Assumenda earum est repellat ab vitae reprehenderit minus vel.
-              </p>
-            </div>
-            <div class="line"></div>
-            <div class="news">
-              <h4>Community Share Day</h4>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Assumenda earum est repellat ab vitae reprehenderit minus vel.
-              </p>
-            </div>
-            <div class="line"></div>
-            <div class="news">
-              <h4>Updated Privacy Policy</h4>
-              <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Assumenda earum est repellat ab vitae reprehenderit minus vel.
-              </p>
-            </div>
+        <!-- empty div to line up the cads -->
+      </div>
+      <div class="announcements">
+        <h2>Announcements</h2>
+        <div class="top">
+          <div class="news">
+            <h4>Site Maintenance</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Assumenda earum est repellat ab vitae reprehenderit minus vel.
+            </p>
           </div>
-          <h2>Trending</h2>
-          <div class="bottom">
-            <div class="trend">
-              <img src="/assets/icons/icons8-iron-man.svg" alt="" />
-              <p class="username">
-                @tegan <br />
-                <span class="name">World Peace Builder</span>
-              </p>
-            </div>
-            <div class="trend">
-              <img src="/assets/icons/icons8-anonymous-mask-100.svg" alt="" />
-              <p class="username">
-                @mfreeman <br />
-                <span class="name">The God Actor</span>
-              </p>
-            </div>
-            <div class="trend">
-              <img src="/assets/icons/icons8-futurama-bender.svg" alt="" />
-              <p class="username">
-                @bender <br />
-                <span class="name">Bender Fender</span>
-              </p>
-            </div>
-            <div class="trend">
-              <img src="/assets/icons/icons8-jake.svg" alt="" />
-              <p class="username">
-                @alex <br />
-                <span class="name">No Traffic Maker</span>
-              </p>
-            </div>
+          <div class="line"></div>
+          <div class="news">
+            <h4>Community Share Day</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Assumenda earum est repellat ab vitae reprehenderit minus vel.
+            </p>
+          </div>
+          <div class="line"></div>
+          <div class="news">
+            <h4>Updated Privacy Policy</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Assumenda earum est repellat ab vitae reprehenderit minus vel.
+            </p>
+          </div>
+        </div>
+        <h2>Trending</h2>
+        <div class="bottom">
+          <div class="trend">
+            <img src="/assets/icons/icons8-iron-man.svg" alt="" />
+            <p class="username">
+              @tegan <br />
+              <span class="name">World Peace Builder</span>
+            </p>
+          </div>
+          <div class="trend">
+            <img src="/assets/icons/icons8-anonymous-mask-100.svg" alt="" />
+            <p class="username">
+              @mfreeman <br />
+              <span class="name">The God Actor</span>
+            </p>
+          </div>
+          <div class="trend">
+            <img src="/assets/icons/icons8-futurama-bender.svg" alt="" />
+            <p class="username">
+              @bender <br />
+              <span class="name">Bender Fender</span>
+            </p>
+          </div>
+          <div class="trend">
+            <img src="/assets/icons/icons8-jake.svg" alt="" />
+            <p class="username">
+              @alex <br />
+              <span class="name">No Traffic Maker</span>
+            </p>
           </div>
         </div>
       </div>
+      <!-- </div> -->
     </div>
   </body>
 </html>
