improved layout and cleaned up the code

--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
             <img
               src="/assets/icons/magnify.svg"
               class="magnifier fa_icon"
-              style="transform: rotate(90deg)"
               alt="search"
             />
-            <input type="text" />
+            <input type="search" />
           </div>
           <div class="notifications-name">
             <img
@@ -139,7 +138,6 @@
           </div>
         </div>
       </div>
-      <!-- <div class="main-content"> -->
       <div class="projects">
         <h2>Your Projects</h2>
         <div>
