--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <div class="topbar">
           <div class="search-bar">
             <img
+              src="/assets/icons/upcareera_logo_1.svg"
+              class="logo-landscape"
+              alt="Upcareera"
+            />
+            <img
               src="/assets/icons/magnify.svg"
               class="magnifier fa_icon"
               alt="search"
