optimized top and side bars

--- a/index.html
+++ b/index.html
@@ -18,50 +18,50 @@
     <div class="container">
       <div class="header">
         <div class="topbar">
-          <div class="search-bar">
-            <img
-              src="/assets/icons/upcareera_logo_1.svg"
-              class="logo-landscape"
-              alt="Upcareera"
-            />
-            <img
-              src="/assets/icons/magnify.svg"
-              class="magnifier fa_icon"
-              alt="search"
-            />
-            <input type="search" />
-          </div>
-          <div class="notifications-name">
-            <img
-              src="/assets/icons/bell.svg"
-              class="bell fa_icon"
-              alt="notifications"
-            />
-            <img
-              src="/assets/icons/icons8-anonymous-mask-100.svg"
-              class="icon"
-              alt="Morgan Freeman"
-            />
-            <p>Morgan Freeman</p>
-          </div>
+          <!-- <div class="search-bar"> -->
+          <img
+            src="/assets/icons/upcareera_logo_1.svg"
+            class="logo-landscape"
+            alt="Upcareera"
+          />
+          <img
+            src="/assets/icons/magnify.svg"
+            class="magnifier fa_icon"
+            alt="search"
+          />
+          <input type="search" />
+          <!-- </div> -->
+          <!-- <div class="notifications-name"> -->
+          <img
+            src="/assets/icons/bell.svg"
+            class="bell fa_icon push-left"
+            alt="notifications"
+          />
+          <img
+            src="/assets/icons/icons8-anonymous-mask-100.svg"
+            class="icon"
+            alt="Morgan Freeman"
+          />
+          <p>Morgan Freeman</p>
+          <!-- </div> -->
         </div>
         <div class="bottombar">
-          <div class="profile">
-            <img
-              src="/assets/icons/icons8-anonymous-mask-100.svg"
-              class="icon"
-              alt="profile picture"
-            />
-            <p>
-              Hi there, <br />
-              <span class="username">Morgan Freeman (@mfreeman)</span>
-            </p>
-          </div>
-          <div class="action-buttons">
-            <button class="profile-button-action">New</button>
-            <button class="profile-button-action">Upload</button>
-            <button class="profile-button-action">Share</button>
-          </div>
+          <!-- <div class="profile"> -->
+          <img
+            src="/assets/icons/icons8-anonymous-mask-100.svg"
+            class="icon"
+            alt="profile picture"
+          />
+          <p>
+            Hi there, <br />
+            <span class="username">Morgan Freeman (@mfreeman)</span>
+          </p>
+          <!-- </div> -->
+          <!-- <div class="action-buttons"> -->
+          <button class="profile-button-action push-left">New</button>
+          <button class="profile-button-action">Upload</button>
+          <button class="profile-button-action">Share</button>
+          <!-- </div> -->
         </div>
       </div>
       <div class="sidebar">
@@ -72,76 +72,68 @@
           alt="Upcareera"
         />
         <!-- external links -->
-        <div>
-          <div class="links-container-one">
-            <p class="external-link">
-              <img src="/assets/icons/home.svg" class="sidebar-icon" alt="" />
-              <a href="">Home</a>
-            </p>
-            <p class="external-link">
-              <img
-                src="/assets/icons/smart-card.svg"
-                class="sidebar-icon"
-                alt=""
-              />
-              <a href="">Profile</a>
-            </p>
-            <p class="external-link">
-              <img
-                src="/assets/icons/android-messages.svg"
-                class="sidebar-icon"
-                alt=""
-              />
-              <a href="">Messages</a>
-            </p>
-            <p class="external-link">
-              <img
-                src="/assets/icons/history.svg"
-                class="sidebar-icon"
-                alt=""
-              />
-              <a href="">History</a>
-            </p>
-            <p class="external-link">
-              <img
-                src="/assets/icons/arrow-decision.svg"
-                class="sidebar-icon"
-                alt=""
-              />
-              <a href="">Tasks</a>
-            </p>
-            <p class="external-link">
-              <img
-                src="/assets/icons/account-group.svg"
-                class="sidebar-icon"
-                alt=""
-              />
-              <a href="">Communities</a>
-            </p>
-          </div>
-          <div class="links-container-two">
-            <p class="external-link">
-              <img src="/assets/icons/cog.svg" class="sidebar-icon" alt="" />
-              <a href="">Settings</a>
-            </p>
-            <p class="external-link">
-              <img
-                src="/assets/icons/help-rhombus.svg"
-                class="sidebar-icon"
-                alt=""
-              />
-              <a href="">Support</a>
-            </p>
-            <p class="external-link">
-              <img
-                src="/assets/icons/shield-lock.svg"
-                class="sidebar-icon"
-                alt=""
-              />
-              <a href="">Privacy</a>
-            </p>
-          </div>
-        </div>
+        <!-- <div class="links-container"> -->
+        <!-- <div class="links-container-one"> -->
+        <p class="external-link">
+          <img src="/assets/icons/home.svg" class="sidebar-icon" alt="" />
+          <a href="">Home</a>
+        </p>
+        <p class="external-link">
+          <img src="/assets/icons/smart-card.svg" class="sidebar-icon" alt="" />
+          <a href="">Profile</a>
+        </p>
+        <p class="external-link">
+          <img
+            src="/assets/icons/android-messages.svg"
+            class="sidebar-icon"
+            alt=""
+          />
+          <a href="">Messages</a>
+        </p>
+        <p class="external-link">
+          <img src="/assets/icons/history.svg" class="sidebar-icon" alt="" />
+          <a href="">History</a>
+        </p>
+        <p class="external-link">
+          <img
+            src="/assets/icons/arrow-decision.svg"
+            class="sidebar-icon"
+            alt=""
+          />
+          <a href="">Tasks</a>
+        </p>
+        <p class="external-link">
+          <img
+            src="/assets/icons/account-group.svg"
+            class="sidebar-icon"
+            alt=""
+          />
+          <a href="">Communities</a>
+        </p>
+        <!-- </div> -->
+        <!-- <div class="links-container-two"> -->
+        <p class="external-link push-down">
+          <img src="/assets/icons/cog.svg" class="sidebar-icon" alt="" />
+          <a href="">Settings</a>
+        </p>
+        <p class="external-link">
+          <img
+            src="/assets/icons/help-rhombus.svg"
+            class="sidebar-icon"
+            alt=""
+          />
+          <a href="">Support</a>
+        </p>
+        <p class="external-link">
+          <img
+            src="/assets/icons/shield-lock.svg"
+            class="sidebar-icon"
+            alt=""
+          />
+          <a href="">Privacy</a>
+        </p>
+        <!-- </div> -->
+        <!-- </div> -->
       </div>
       <div class="projects">
         <h2>Your Projects</h2>
