optimized sidebar position in mobile view

--- a/index.html
+++ b/index.html
@@ -65,15 +65,11 @@
         </div>
       </div>
       <div class="sidebar">
-        <!-- logo -->
         <img
           src="/assets/icons/upcareera_logo_1.svg"
           class="logo"
           alt="Upcareera"
         />
-        <!-- external links -->
-        <!-- <div class="links-container"> -->
-        <!-- <div class="links-container-one"> -->
         <p class="external-link">
           <img src="/assets/icons/home.svg" class="sidebar-icon" alt="" />
           <a href="">Home</a>
@@ -110,9 +106,7 @@
           />
           <a href="">Communities</a>
         </p>
-        <!-- </div> -->
-        <!-- <div class="links-container-two"> -->
-        <p class="external-link push-down">
+        <p class="external-link push-down push-left">
           <img src="/assets/icons/cog.svg" class="sidebar-icon" alt="" />
           <a href="">Settings</a>
         </p>
@@ -132,8 +126,6 @@
           />
           <a href="">Privacy</a>
         </p>
-        <!-- </div> -->
-        <!-- </div> -->
       </div>
       <div class="projects">
         <h2>Your Projects</h2>
@@ -283,7 +275,6 @@
           </div>
         </div>
       </div>
-      <!-- </div> -->
     </div>
   </body>
 </html>
