fixed a bug with images not loading

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
         <div class="topbar">
           <!-- <div class="search-bar"> -->
           <img
-            src="/assets/icons/upcareera_logo_1.svg"
+            src="assets/icons/upcareera_logo_1.svg"
             class="logo-landscape"
             alt="Upcareera"
           />
           <img
-            src="/assets/icons/magnify.svg"
+            src="assets/icons/magnify.svg"
             class="magnifier fa_icon"
             alt="search"
           />
@@ -33,12 +33,12 @@
           <!-- </div> -->
           <!-- <div class="notifications-name"> -->
           <img
-            src="/assets/icons/bell.svg"
+            src="assets/icons/bell.svg"
             class="bell fa_icon push-left"
             alt="notifications"
           />
           <img
-            src="/assets/icons/icons8-anonymous-mask-100.svg"
+            src="assets/icons/icons8-anonymous-mask-100.svg"
             class="icon"
             alt="Morgan Freeman"
           />
@@ -48,7 +48,7 @@
         <div class="bottombar">
           <!-- <div class="profile"> -->
           <img
-            src="/assets/icons/icons8-anonymous-mask-100.svg"
+            src="assets/icons/icons8-anonymous-mask-100.svg"
             class="icon"
             alt="profile picture"
           />
@@ -66,33 +66,33 @@
       </div>
       <div class="sidebar">
         <img
-          src="/assets/icons/upcareera_logo_1.svg"
+          src="assets/icons/upcareera_logo_1.svg"
           class="logo"
           alt="Upcareera"
         />
         <p class="external-link">
-          <img src="/assets/icons/home.svg" class="sidebar-icon" alt="" />
+          <img src="assets/icons/home.svg" class="sidebar-icon" alt="" />
           <a href="">Home</a>
         </p>
         <p class="external-link">
-          <img src="/assets/icons/smart-card.svg" class="sidebar-icon" alt="" />
+          <img src="assets/icons/smart-card.svg" class="sidebar-icon" alt="" />
           <a href="">Profile</a>
         </p>
         <p class="external-link">
           <img
-            src="/assets/icons/android-messages.svg"
+            src="assets/icons/android-messages.svg"
             class="sidebar-icon"
             alt=""
           />
           <a href="">Messages</a>
         </p>
         <p class="external-link">
-          <img src="/assets/icons/history.svg" class="sidebar-icon" alt="" />
+          <img src="assets/icons/history.svg" class="sidebar-icon" alt="" />
           <a href="">History</a>
         </p>
         <p class="external-link">
           <img
-            src="/assets/icons/arrow-decision.svg"
+            src="assets/icons/arrow-decision.svg"
             class="sidebar-icon"
             alt=""
           />
@@ -100,30 +100,26 @@
         </p>
         <p class="external-link">
           <img
-            src="/assets/icons/account-group.svg"
+            src="assets/icons/account-group.svg"
             class="sidebar-icon"
             alt=""
           />
           <a href="">Communities</a>
         </p>
         <p class="external-link push-down push-left">
-          <img src="/assets/icons/cog.svg" class="sidebar-icon" alt="" />
+          <img src="assets/icons/cog.svg" class="sidebar-icon" alt="" />
           <a href="">Settings</a>
         </p>
         <p class="external-link">
           <img
-            src="/assets/icons/help-rhombus.svg"
+            src="assets/icons/help-rhombus.svg"
             class="sidebar-icon"
             alt=""
           />
           <a href="">Support</a>
         </p>
         <p class="external-link">
-          <img
-            src="/assets/icons/shield-lock.svg"
-            class="sidebar-icon"
-            alt=""
-          />
+          <img src="assets/icons/shield-lock.svg" class="sidebar-icon" alt="" />
           <a href="">Privacy</a>
         </p>
       </div>
@@ -137,10 +133,10 @@
               facilis alias, nulla inventore dolorem et?
             </p>
             <div class="card-buttons">
-              <img src="/assets/icons/thumb-up-outline.svg" alt="" />
-              <img src="/assets/icons/thumb-down-outline.svg" alt="" />
-              <img src="/assets/icons/comment-processing-outline.svg" alt="" />
-              <img src="/assets/icons/bookmark-outline.svg" alt="" />
+              <img src="assets/icons/thumb-up-outline.svg" alt="" />
+              <img src="assets/icons/thumb-down-outline.svg" alt="" />
+              <img src="assets/icons/comment-processing-outline.svg" alt="" />
+              <img src="assets/icons/bookmark-outline.svg" alt="" />
             </div>
           </div>
           <div class="card">
@@ -151,10 +147,10 @@
               voluptas labore.
             </p>
             <div class="card-buttons">
-              <img src="/assets/icons/thumb-up-outline.svg" alt="" />
-              <img src="/assets/icons/thumb-down-outline.svg" alt="" />
-              <img src="/assets/icons/comment-processing-outline.svg" alt="" />
-              <img src="/assets/icons/bookmark-outline.svg" alt="" />
+              <img src="assets/icons/thumb-up-outline.svg" alt="" />
+              <img src="assets/icons/thumb-down-outline.svg" alt="" />
+              <img src="assets/icons/comment-processing-outline.svg" alt="" />
+              <img src="assets/icons/bookmark-outline.svg" alt="" />
             </div>
           </div>
           <div class="card">
@@ -167,10 +163,10 @@
             </p>
 
             <div class="card-buttons">
-              <img src="/assets/icons/thumb-up-outline.svg" alt="" />
-              <img src="/assets/icons/thumb-down-outline.svg" alt="" />
-              <img src="/assets/icons/comment-processing-outline.svg" alt="" />
-              <img src="/assets/icons/bookmark-outline.svg" alt="" />
+              <img src="assets/icons/thumb-up-outline.svg" alt="" />
+              <img src="assets/icons/thumb-down-outline.svg" alt="" />
+              <img src="assets/icons/comment-processing-outline.svg" alt="" />
+              <img src="assets/icons/bookmark-outline.svg" alt="" />
             </div>
           </div>
           <div class="card">
@@ -181,10 +177,10 @@
               voluptas labore rerum doloribus itaque cupiditate facere.
             </p>
             <div class="card-buttons">
-              <img src="/assets/icons/thumb-up-outline.svg" alt="" />
-              <img src="/assets/icons/thumb-down-outline.svg" alt="" />
-              <img src="/assets/icons/comment-processing-outline.svg" alt="" />
-              <img src="/assets/icons/bookmark-outline.svg" alt="" />
+              <img src="assets/icons/thumb-up-outline.svg" alt="" />
+              <img src="assets/icons/thumb-down-outline.svg" alt="" />
+              <img src="assets/icons/comment-processing-outline.svg" alt="" />
+              <img src="assets/icons/bookmark-outline.svg" alt="" />
             </div>
           </div>
           <div class="card">
@@ -194,10 +190,10 @@
               facilis alias.
             </p>
             <div class="card-buttons">
-              <img src="/assets/icons/thumb-up-outline.svg" alt="" />
-              <img src="/assets/icons/thumb-down-outline.svg" alt="" />
-              <img src="/assets/icons/comment-processing-outline.svg" alt="" />
-              <img src="/assets/icons/bookmark-outline.svg" alt="" />
+              <img src="assets/icons/thumb-up-outline.svg" alt="" />
+              <img src="assets/icons/thumb-down-outline.svg" alt="" />
+              <img src="assets/icons/comment-processing-outline.svg" alt="" />
+              <img src="assets/icons/bookmark-outline.svg" alt="" />
             </div>
           </div>
           <div class="card">
@@ -207,10 +203,10 @@
               facilis alias, nulla inventore dolorem et? Veniam aliquid quis.
             </p>
             <div class="card-buttons">
-              <img src="/assets/icons/thumb-up-outline.svg" alt="" />
-              <img src="/assets/icons/thumb-down-outline.svg" alt="" />
-              <img src="/assets/icons/comment-processing-outline.svg" alt="" />
-              <img src="/assets/icons/bookmark-outline.svg" alt="" />
+              <img src="assets/icons/thumb-up-outline.svg" alt="" />
+              <img src="assets/icons/thumb-down-outline.svg" alt="" />
+              <img src="assets/icons/comment-processing-outline.svg" alt="" />
+              <img src="assets/icons/bookmark-outline.svg" alt="" />
             </div>
           </div>
         </div>
@@ -246,28 +242,28 @@
         <h2>Trending</h2>
         <div class="bottom">
           <div class="trend">
-            <img src="/assets/icons/icons8-iron-man.svg" alt="" />
+            <img src="assets/icons/icons8-iron-man.svg" alt="" />
             <p class="username">
               @tegan <br />
               <span class="name">World Peace Builder</span>
             </p>
           </div>
           <div class="trend">
-            <img src="/assets/icons/icons8-anonymous-mask-100.svg" alt="" />
+            <img src="assets/icons/icons8-anonymous-mask-100.svg" alt="" />
             <p class="username">
               @mfreeman <br />
               <span class="name">The God Actor</span>
             </p>
           </div>
           <div class="trend">
-            <img src="/assets/icons/icons8-futurama-bender.svg" alt="" />
+            <img src="assets/icons/icons8-futurama-bender.svg" alt="" />
             <p class="username">
               @bender <br />
               <span class="name">Bender Fender</span>
             </p>
           </div>
           <div class="trend">
-            <img src="/assets/icons/icons8-jake.svg" alt="" />
+            <img src="assets/icons/icons8-jake.svg" alt="" />
             <p class="username">
               @alex <br />
               <span class="name">No Traffic Maker</span>
