--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </div>
       <div class="projects">
         <h2>Your Projects</h2>
-        <div>
+        <div class="card-container">
           <div class="card">
             <h3>Calculator</h3>
             <p>
